src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>GWBase__Effective_Action_Date__c</fullName>
        <formula>IF (  Campaign.StartDate &lt;=  FirstRespondedDate &amp;&amp; Campaign.EndDate &gt;= FirstRespondedDate &amp;&amp; NOT(ISBLANK(Campaign.StartDate)) &amp;&amp; NOT(ISBLANK(Campaign.EndDate)) &amp;&amp; NOT(ISBLANK(FirstRespondedDate)) , FirstRespondedDate , Campaign.StartDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>if the FirstRespondedDate (the date contact was marked Responded for the campaign) is between campaign start &amp; end dates (meaning it has both), it&apos;ll use the responded date (important for long campaigns).  Otherwise, it&apos;ll just use campaign start date.</inlineHelpText>
        <label>Effective Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWBase__Household_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this person is not the first from his/her household to be added to this campaign.  Filter out records with this box checked to avoid sending mail to a given household address more than once.</inlineHelpText>
        <label>Household Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ebConnector__Amount_Paid__c</fullName>
        <description>Amount paid by Eventbrite attendee</description>
        <inlineHelpText>Amount paid by Eventbrite attendee</inlineHelpText>
        <label>Eventbrite Payment</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ebConnector__Attendee_Created_Date__c</fullName>
        <description>Date and time the Eventbrite attendee record was created</description>
        <inlineHelpText>Date and time the Eventbrite attendee record was created</inlineHelpText>
        <label>Eventbrite Attendee Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ebConnector__Currency__c</fullName>
        <description>Three-letter ISO code for currency used to purchase Eventbrite ticket</description>
        <inlineHelpText>Three-letter ISO code for currency used to purchase Eventbrite ticket</inlineHelpText>
        <label>Eventbrite Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ebConnector__Discount__c</fullName>
        <description>Eventbrite discount code and amount that was redeemed by the attendee</description>
        <inlineHelpText>Eventbrite discount code and amount that was redeemed by the attendee</inlineHelpText>
        <label>Eventbrite Discount</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ebConnector__Event_Date__c</fullName>
        <description>Date the Eventbrite attendee has selected (for repeat Eventbrite events only)</description>
        <inlineHelpText>Date the Eventbrite attendee has selected (for repeat Eventbrite events only)</inlineHelpText>
        <label>Eventbrite Event Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ebConnector__Event_ID__c</fullName>
        <description>ID of related Eventbrite event</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of related Eventbrite event</inlineHelpText>
        <label>Eventbrite Event ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ebConnector__Event_URL__c</fullName>
        <description>Link to Eventbrite event</description>
        <formula>IF(ISNULL(ebConnector__Event_ID__c),NULL,&apos;http://www.eventbrite.com/myevent?eid=&apos; + ebConnector__Event_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Eventbrite event</inlineHelpText>
        <label>Eventbrite Event URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ebConnector__Notes__c</fullName>
        <description>Optional notes about the Eventbrite attendee</description>
        <inlineHelpText>Optional notes about the Eventbrite attendee</inlineHelpText>
        <label>Eventbrite Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ebConnector__Order_ID__c</fullName>
        <description>Eventbrite order ID</description>
        <externalId>true</externalId>
        <inlineHelpText>Eventbrite order ID</inlineHelpText>
        <label>Eventbrite Order ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ebConnector__Order_Type__c</fullName>
        <description>Type/status of Eventbrite order (Free Order, PayPal Completed, Pay By Check, etc).</description>
        <inlineHelpText>Type/status of Eventbrite order (Free Order, PayPal Completed, Pay By Check, etc).</inlineHelpText>
        <label>Eventbrite Order Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ebConnector__Order_URL__c</fullName>
        <description>Link to Eventbrite order</description>
        <formula>IF(ISNULL(ebConnector__Event_ID__c),NULL,&apos;http://www.eventbrite.com/reports?eid=&apos; + ebConnector__Event_ID__c + &apos;&amp;rid=h&amp;filterby=all,&apos; + ebConnector__Order_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to Eventbrite order</inlineHelpText>
        <label>Eventbrite Order URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ebConnector__Quantity__c</fullName>
        <description>Quantity of Eventbrite tickets purchased</description>
        <inlineHelpText>Quantity of Eventbrite tickets purchased</inlineHelpText>
        <label>Eventbrite Ticket Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ebConnector__Ticket_ID__c</fullName>
        <description>ID of the Eventbrite ticket</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the Eventbrite ticket</inlineHelpText>
        <label>Eventbrite Ticket ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>